fixing about me title spacing?

--- a/css/styles.css
+++ b/css/styles.css
@@ -467,6 +467,7 @@ footer {
 }
 #index-right h2 {
   padding-bottom: 24px;
+  padding-left: 24px;
 }
 #index-right p {
   padding-bottom: 48px;
