--- a/scss/sections/_index.scss
+++ b/scss/sections/_index.scss
@@ -31,6 +31,7 @@
     grid-area: ir;
     h2{
         padding-bottom: 24px;
+        padding-left: 24px;
     }
     p{
         padding-bottom: 48px;
